--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="/images/wes.jpg">
+            <img class="avatar" src="/images/wes.jpg" alt="headshot of Wes smiling at the camera>
             <div >
                 <h3>Wes Willison</h3>
                 <p>Frontend Developer</p>
